# Python

./: .gitignore  import time.py
lab2/: .gitignore  README.md  import abc.py  requirements.txt
lab3/media_project/: pyproject.toml  requirements.txt
lab3/media_project/medialib/: __init__.py  __main__.py
lab3/media_project/medialib/core/: __init__.py  exceptions.py  models.py
lab3/media_project/medialib/utils/: __init__.py  config_loader.py  validators.py
pr1/: practical_01_task_1_1.py  practical_01_task_1_2.py  practical_01_task_2_1.py  practical_01_task_2_2.py  practical_01_task_3_1.py  practical_01_task_3_2.py
requirements.txt/: 1  README.md
sr1/: practical_01_integrated.py
